--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "dspy_intro"}]
 python = "^3.11"
 dspy-ai = "^2.4.5"
 python-dotenv = "^1.0.1"
+jinja2 = "^3.1.4"
 
 
 [build-system]
